--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+}
+
 #bounds {
     height: 100px;
     width: 80%;
@@ -13,7 +18,7 @@
 }
 
 #percentage-marks {
-    height: 40px;
+    height: 20px;
     width: 100%;
     background-color: aliceblue;
 }
@@ -26,3 +31,24 @@
     width: 100%;
     background-color: lightgray;
 }
+
+#percentage-marks div {
+    outline: 1px solid grey;
+    height: 100%;
+    width: 5%;
+    float: left;
+}
+
+#F {
+    width: 50% !important;
+}
+#Ap {
+    width: 10% !important;
+}
+
+#inputs{
+    display: block;
+}
+
+
+
